--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -5,7 +5,6 @@
     text-align: left;
   }
 }
-
 .footer__container {
   @include for-size(tablet) {
     display: flex;
@@ -20,41 +19,20 @@
 }
 
 .consist__made {
+  font-family: 'Titan One';
   text-transform: uppercase;
   color: $second-color;
-  width: 340px;
-  height: 42px;
-  left: 22px;
-  top: 6706px;
-
-  font-family: Titan One;
-  font-style: normal;
-  font-weight: normal;
   font-size: 18px;
   line-height: 21px;
-
   margin-bottom: 17px;
 
   @include for-size(tablet) {
-    height: 57px;
-
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
     font-size: 26px;
     line-height: 30px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
   }
   @include for-size(desktop) {
-    width: 472px;
-    height: 34px;
-    left: 114px;
-    top: 4923px;
-
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
     font-size: 30px;
     line-height: 34px;
     letter-spacing: 0.04em;
@@ -63,32 +41,16 @@
 }
 
 .consist__with {
+  font-family: 'Titan One';
   @include for-size(todesktop) {
     text-transform: uppercase;
     color: $main-color;
-    width: 200px;
-    height: 76px;
-    left: 20px;
-    top: 6765px;
-
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
     font-size: 34px;
-    line-height: 39px;
     letter-spacing: 0.04em;
   }
 
   @include for-size(desktop) {
-    height: 66px;
-    left: 114px;
-    top: 4972px;
-
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
     font-size: 58px;
-    line-height: 66px;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: $main-color;
@@ -97,7 +59,6 @@
 
 .consist {
   margin-bottom: 43px;
-
   // @include for-size(desktop) {
   //   width: 475px;
   // }
@@ -125,64 +86,28 @@
 }
 
 .footer-contacts__text {
-  width: 230px;
-  height: 22px;
-  left: 70px;
-  top: 6962px;
-
-  font-family: DM Sans;
-  font-style: normal;
-  font-weight: bold;
+  font-family: 'DM Sans';
+  font-weight: 700;
   font-size: 12px;
-  line-height: 186%;
-
   text-align: right;
-
   color: $text-color;
-
   @include for-size(tablet) {
-    width: 268px;
-    height: 26px;
-    left: 466px;
-    top: 4309px;
-
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
     font-size: 14px;
-    line-height: 186%;
+    // line-height: 186%;
     text-align: right;
   }
 }
 
 .footer-contacts__link {
-  width: 166px;
-  height: 22px;
-  left: 70px;
-  top: 6962px;
-
-  font-family: DM Sans;
-  font-style: normal;
-  font-weight: bold;
+  font-family: 'DM Sans';
+  font-weight: 700;
   font-size: 12px;
   line-height: 186%;
-
   text-align: right;
-
   color: $main-color;
-
   @include for-size(tablet) {
-    width: 140px;
-    // width: 268px;
-    height: 26px;
-    left: 466px;
-    top: 4309px;
-
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
     font-size: 14px;
-    line-height: 186%;
+    // line-height: 186%;
     text-align: right;
   }
 }
@@ -216,19 +141,15 @@
   margin: 0;
   list-style: none;
 }
-
 .social-list__item:not(:last-child) {
   margin-right: 28px;
 }
-
 .social-list {
-  display: inline-flex;
+  display: flex;
   justify-content: right;
   align-items: center;
   text-align: right;
-
   height: 19px;
-
   margin-bottom: 46px;
 }
 
