--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -121,7 +121,6 @@
     right: 0;
     width: 250px;
     height: 100%;
-    padding-top: 85px;
     background-color: $menu;
     z-index: 3;
     pointer-events: none;
@@ -134,6 +133,9 @@
       @include trans(visibility, visible);
       @include trans(transform, translateX(0));
     }
+  }
+  @include for-size(mobile) {
+    padding-top: 85px;
   }
   @include for-size(tablet-only) {
     padding-top: 102px;
