--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,38 +1,58 @@
 <footer class="footer">
-  <div class="container footer__container">
-    <div class="consist">
-      <p class="consist__made">homemade ice cream made</p>
-      <p class="consist__with">with passion</p>
-    </div>
-    <div class="footer-info">
-      <ul class="list social-list">
-        <li class="social-list__item">
-          <a href="#" class="social-list__link" aria-label="github">
-            <svg class="social-list__icon">
-              <use href="./images/icons/sprite.svg#icon-github"></use>
-            </svg>
+  <div class="container">
+    <div class="footer__padding">
+      <div class="footer__consist">
+        <h3 class="footer__consist__made">homemade ice cream made</h3>
+        <h3 class="footer__consist__with">with passion</h3>
+      </div>
+      <div class="footer__info">
+        <ul class="social-icons">
+          <li class="social-icons__item">
+            <a
+              class="social-icons__link"
+              href="https://www.github.com/"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="ссылка Github"
+            >
+              <svg class="social-icons__icon">
+                <use href="./images/icons/sprite.svg#icon-github"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons__item">
+            <a
+              class="social-icons__link"
+              href="https://www.telegram.com/"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="ссылка Telegram"
+            >
+              <svg class="social-icons__icon">
+                <use href="./images/icons/sprite.svg#icon-telegram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-icons__item">
+            <a
+              class="social-icons__link"
+              href="https://www.facebook.com/"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="ссылка Инстаграм"
+            >
+              <svg class="social-icons__icon">
+                <use href="./images/icons/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <div class="footer__contacts">
+          <a class="footer__contacts__link" href="tel:+61(0)383766284">
+            <span class="footer__contacts__text">Feel free to contact</span> +61
+            (0) 383 766 284
           </a>
-        </li>
-        <li class="social-list__item">
-          <a href="#" class="social-list__link" aria-label="telegram">
-            <svg class="social-list__icon">
-              <use href="./images/icons/sprite.svg#icon-telegram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social-list__item">
-          <a href="#" class="social-list__link" aria-label="facebook">
-            <svg class="social-list__icon">
-              <use href="./images/icons/sprite.svg#icon-facebook"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-      <div class="footer-contacts">
-        <p class="footer-contacts__text">Feel free to contact</p>
-        <a class="footer-contacts__link" href="tel:+61(0)383766284"
-          >+61 (0) 383 766 284</a
-        >
+        </div>
       </div>
     </div>
   </div>
