--- a/src/sass/utils/variables.scss
+++ b/src/sass/utils/variables.scss
@@ -25,6 +25,8 @@ $text-color: #000000;
 $second-text-color: #907e82;
 // граница
 $border: #e18298;
+//  icons
+$icons: #fea5bb;
 
 // functions
 // тайминг для transition
