--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -1,167 +1,101 @@
 .footer {
   background-color: $bg-color;
-
-  @include for-size(todesktop) {
-    text-align: left;
-  }
 }
-.footer__container {
+.footer__padding {
+  padding-bottom: 45px;
   @include for-size(tablet) {
-    display: flex;
-    justify-content: center;
-    // align-items: center;
+    @include flex($justcont: space-between, $ai: baseline);
   }
-
-  // @include for-size(desktop) {
-  //   padding-right: 95px;
-  //   padding-left: 95px;
-  // }
+  @include for-size(tablet) {
+    padding: 0 15px;
+    padding-bottom: 90px;
+  }
+  @include for-size(desktop) {
+    padding: 0 120px;
+    padding-bottom: 100px;
+  }
 }
-
-.consist__made {
+.footer__consist {
   font-family: 'Titan One';
+  margin-bottom: 45px;
+  max-width: 230px;
   text-transform: uppercase;
-  color: $second-color;
-  font-size: 18px;
-  line-height: 21px;
-  margin-bottom: 17px;
-
+  letter-spacing: 0.04em;
+  @include for-size(tablet) {
+    margin-bottom: 0;
+    max-width: 340px;
+  }
+  @include for-size(desktop) {
+    margin-bottom: 0;
+    max-width: 100%;
+  }
+}
+.footer__consist__made {
+  margin-bottom: 15px;
+  @include font(18px, 400, $second-color, 1.17);
   @include for-size(tablet) {
     font-size: 26px;
-    line-height: 30px;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
+    line-height: 1.15;
   }
   @include for-size(desktop) {
     font-size: 30px;
-    line-height: 34px;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
+    line-height: 1.13;
   }
 }
-
-.consist__with {
-  font-family: 'Titan One';
-  @include for-size(todesktop) {
-    text-transform: uppercase;
-    color: $main-color;
-    font-size: 34px;
-    letter-spacing: 0.04em;
-  }
-
-  @include for-size(desktop) {
-    font-size: 58px;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: $main-color;
-  }
-}
-
-.consist {
-  margin-bottom: 43px;
-  // @include for-size(desktop) {
-  //   width: 475px;
-  // }
-}
-
-.footer-info {
-  text-align: right;
-
-  @include for-size(tablet) {
-    margin-bottom: 91px;
-    padding-left: 95px;
-  }
-
-  @include for-size(desktop) {
-    margin-bottom: 97px;
-    padding-left: 200px;
-  }
-}
-
-.footer-contacts {
-  display: flex;
-  padding-bottom: 43px;
-
-  text-align: right;
-}
-
-.footer-contacts__text {
-  font-family: 'DM Sans';
-  font-weight: 700;
-  font-size: 12px;
-  text-align: right;
-  color: $text-color;
-  @include for-size(tablet) {
-    font-size: 14px;
-    // line-height: 186%;
-    text-align: right;
-  }
-}
-
-.footer-contacts__link {
-  font-family: 'DM Sans';
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 186%;
-  text-align: right;
+.footer__consist__with {
+  font-size: 34px;
+  line-height: 1.15;
   color: $main-color;
   @include for-size(tablet) {
-    font-size: 14px;
-    // line-height: 186%;
-    text-align: right;
+    font-size: 48px;
+    line-height: 1.15;
+    letter-spacing: 0.06em;
   }
 }
-
-.social-list__icon:hover,
-.social-list__icon:focus {
-  background-color: $main-color;
-  fill: $main-color;
-  border-radius: 50%;
-  @include trans(stroke, $main-color);
-}
-
-.social-list__icon {
-  width: 19px;
-  height: 19px;
-  fill: #fea5bb;
-
-  @include for-size(tablet) {
-    width: 34px;
-    height: 34px;
-  }
-
-  @include for-size(desktop) {
-    width: 34px;
-    height: 34px;
-  }
-}
-
-.list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-.social-list__item:not(:last-child) {
-  margin-right: 28px;
-}
-.social-list {
-  display: flex;
-  justify-content: right;
-  align-items: center;
+.footer__info {
   text-align: right;
-  height: 19px;
-  margin-bottom: 46px;
 }
-
-.footer .container {
+.footer__contacts {
+  font-family: 'DM Sans';
+  text-align: right;
+  @include font(12px, 700, $main-color, 1.83);
   @include for-size(tablet) {
-    display: flex;
-    justify-content: flex-start;
-    align-items: baseline;
+    font-size: 14px;
   }
-  @include for-size(desktop) {
-    display: flex;
-    justify-content: flex-start;
-    align-items: baseline;
+}
+.footer__contacts__text {
+  color: $text-color;
+}
+.footer__contacts__link {
+  color: $main-color;
+}
+.social-icons {
+  @include flex($justcont: flex-end);
+  margin-bottom: 45px;
+}
+.social-icons__item:not(:last-child) {
+  margin-right: 30px;
+}
+.social-icons__link {
+  @include flex();
+  @include trans(border-radius, 50%);
+  @include trans(background-color, $white-color);
+  &:hover,
+  &:focus {
+    @include trans(border-radius, 50%);
+    @include trans(background-color, $main-color);
+  }
+}
+.social-icons__icon {
+  width: 32px;
+  height: 32px;
+  @include trans(fill, $icons);
+  .social-icons__link:hover &,
+  .social-icons__link:focus & {
+    @include trans(fill, $main-color);
+  }
+  @include for-size(tablet) {
+    width: 34px;
+    height: 34px;
   }
 }
