--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -1,48 +1,56 @@
 <!--Feedback-->
 <section class="section section--feedback">
   <div class="container">
-    <div class="satisfied">
-      <!-- <img src="./image/feedback-girl" alt="feedback-girl"> -->
-    </div>
-    <div class="review">
-      <li class="quotes">
-        <!-- <img src="./images/feedback-background"> -->
+    <ul class="feedback-list">
+      <li class="feedback-list__item">
+        <img
+          src="./images/general/feedback/testimonials1@1x.jpg"
+          srcset="./images/general/feedback/testimonials1@2x.jpg 2x"
+          alt="Фото1"
+        />
       </li>
-      <li class="lines">
-        <hr size="1px" />
+      <li class="feedback-list__item">
+        <img
+          src="./images/general/feedback/testimonials2@1x.jpg"
+          srcset="./images/general/feedback/testimonials2@2x.jpg 2x"
+          alt="Фото1"
+        />
       </li>
-      <li class="text_feedback">
-        <p>
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-          ipsum primis in nibh vel risus.
-        </p>
+      <li class="feedback-list__item">
+        <img
+          src="./images/general/feedback/testimonials3@1x.jpg"
+          srcset="./images/general/feedback/testimonials3@2x.jpg 2x"
+          alt="Фото1"
+        />
       </li>
+    </ul>
+    <div class="feedback-text-block">
+      <p class="feedback-text">
+        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
+        sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis
+        in nibh vel risus.
+      </p>
     </div>
-    <div class="client">
-      <ul class="change-pages">
-        <li class="points">
-          <!-- <img src="point-1" /> -->
-        </li>
-        <li class="points">
-          <!-- <img src="point-1" /> -->
-        </li>
-        <li class="points">
-          <!-- <img src="point-1" /> -->
-        </li>
-      </ul>
-      <h3 class="client-data">Emily, Los Angeles</h3>
-      <ul class="change-pages">
-        <li class="points">
-          <!-- <img src="./image/feedback-house"> -->
-        </li>
-        <li class="points">
-          <!-- <img src="./image/point-2" /> -->
-        </li>
-        <li class="points">
-          <!-- <img src="./image/point-2" /> -->
-        </li>
-      </ul>
-    </div>
+    <svg class="three-red-points" width="24" height="4">
+      <use href="./images/icons/sprite.svg#icon-points-red"></use>
+    </svg>
+    <p class="feedback-person">Emily, Los Angeles</p>
+    <ul class="feedback-svg-list">
+      <li class="feedback-svg-list__item">
+        <svg width="12" height="12">
+          <use href="./images/icons/sprite.svg#icon-home"></use>
+        </svg>
+      </li>
+      <li class="feedback-svg-list__item">
+        <svg width="12" height="12">
+          <use href="./images/icons/sprite.svg#icon-circle-gray"></use>
+        </svg>
+      </li>
+      <li class="feedback-svg-list__item">
+        <svg width="12" height="12">
+          <use href="./images/icons/sprite.svg#icon-circle-gray"></use>
+        </svg>
+      </li>
+    </ul>
   </div>
 </section>
