позиционирует галерею+галерея в секции howitsmade

--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -1,90 +1,117 @@
 <section class="howitsmade">
-  <div class="background-box">
-    <div class="container">
-      <span class="section__desc section__desc--howitsmade"
-        >tradition and love</span
-      >
-      <h2 class="section__title section__title--howitsmade">how it’s made?</h2>
+  <div class="container">
+    <span class="section__desc section__desc--howitsmade"
+      >tradition and love</span
+    >
+    <h2 class="section__title section__title--howitsmade">how it’s made?</h2>
 
-      <div class="article">
-        <div class="article__img">
-          <picture>
-            <source
-              srcset="
-                ./images/desktop/howitsmade/cow516.png     1x,
-                ./images/desktop/howitsmade/cow1032@2x.png 2x
-              "
-              media="(min-width: 1200px)"
-            />
-            <source
-              srcset="
-                ./images/tablet/howitsmade/cow340.png    1x,
-                ./images/tablet/howitsmade/cow680@2x.png 2x
-              "
-              media="(max-width: 1199px)"
-            />
-            <source
-              srcset="
-                ./images/mobile/howitsmade/cow280.png    1x,
-                ./images/mobile/howitsmade/cow560@2x.png 2x
-              "
-              media="(max-width: 767px)"
-            />
+    <div class="article">
+      <div class="article__img">
+        <picture>
+          <source
+            srcset="
+              ./images/desktop/howitsmade/cow516.png     1x,
+              ./images/desktop/howitsmade/cow1032@2x.png 2x
+            "
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="
+              ./images/tablet/howitsmade/cow340.png    1x,
+              ./images/tablet/howitsmade/cow680@2x.png 2x
+            "
+            media="(max-width: 1199px)"
+          />
+          <source
+            srcset="
+              ./images/mobile/howitsmade/cow280.png    1x,
+              ./images/mobile/howitsmade/cow560@2x.png 2x
+            "
+            media="(max-width: 767px)"
+          />
 
-            <img src="./images/mobile/howitsmade/cow280.png" alt="" />
-          </picture>
-        </div>
-
-        <div class="article__text-box">
-          <p class="article__paragraph">
-            Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel
-            justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend
-            erat at justo fringilla.
-          </p>
-
-          <p class="article__paragraph article__paragraph--grey">
-            Curabitur lacinia enim at ex blandit, vel pellentesque odio
-            elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum
-            euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras
-            massa nibh, tincidunt.
-          </p>
-          <p
-            class="article__paragraph article__paragraph--grey article__paragraph--last-child"
-          >
-            Aliquam erat volutpat. Aenean accumsan.
-          </p>
-
-          <a class="button button--white article__button" href="">
-            Read more
-            <svg class="button__icon" width="10" height="10">
-              <use href="./images/icons/sprite.svg#icon-bigger"></use>
-            </svg>
-          </a>
-        </div>
+          <img src="./images/mobile/howitsmade/cow280.png" alt="" />
+        </picture>
       </div>
 
-      <ul class="flex-box">
-        <li class="howitsmade__item howitsmade__item--milk">
-          <h3 class="howitsmade__title-number">721</h3>
-          <p class="howitsmade__list-text">
-            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-          </p>
-        </li>
+      <div class="article__text-box">
+        <p class="article__paragraph">
+          Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
+          cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
+          justo fringilla.
+        </p>
 
-        <li class="howitsmade__item howitsmade__item--apple">
-          <h3 class="howitsmade__title-number">16kg</h3>
-          <p class="howitsmade__list-text">
-            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-          </p>
-        </li>
+        <p class="article__paragraph article__paragraph--grey">
+          Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum.
+          Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+          suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
+          tincidunt.
+        </p>
+        <p
+          class="article__paragraph article__paragraph--grey article__paragraph--last-child"
+        >
+          Aliquam erat volutpat. Aenean accumsan.
+        </p>
 
-        <li class="howitsmade__item howitsmade__item--heart">
-          <h3 class="howitsmade__title-number">84</h3>
-          <p class="howitsmade__list-text">
-            Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
-          </p>
-        </li>
-      </ul>
+        <a class="button button--white article__button" href="">
+          Read more
+          <svg class="button__icon" width="10" height="10">
+            <use href="./images/icons/sprite.svg#icon-bigger"></use>
+          </svg>
+        </a>
+      </div>
+    </div>
+
+    <ul class="flex-box">
+      <li class="howitsmade__item howitsmade__item--milk">
+        <h3 class="howitsmade__title-number">721</h3>
+        <p class="howitsmade__list-text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+
+      <li class="howitsmade__item howitsmade__item--apple">
+        <h3 class="howitsmade__title-number">16kg</h3>
+        <p class="howitsmade__list-text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+
+      <li class="howitsmade__item howitsmade__item--heart">
+        <h3 class="howitsmade__title-number">84</h3>
+        <p class="howitsmade__list-text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+    </ul>
+  </div>
+
+  <div class="gallery">
+    <div class="container">
+      <picture class="gallery__image">
+        <source
+          srcset="
+            ./images/mobile/gallery/gallery.jpg    1x,
+            ./images/mobile/gallery/gallery@2x.jpg 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <source
+          srcset="
+            ./images/tablet/gallery/gallery.jpg    1x,
+            ./images/tablet/gallery/gallery@2x.jpg 2x
+          "
+          media="(max-width: 1199px)"
+        />
+        <source
+          srcset="
+            ./images/desktop/gallery/gallery.jpg    1x,
+            ./images/desktop/gallery/gallery@2x.jpg 2x
+          "
+          media="(min-width: 1200px)"
+        />
+        <img src="./images/mobile/gallery/gallery.jpg" alt="photo gallery" />
+      </picture>
     </div>
   </div>
 </section>
