--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,4 @@
-<section class="section--gallery section">
+<!-- <section class="section--gallery section">
   <div class="container">
   <picture class="gallery__image">
     <source srcset="
@@ -16,4 +16,4 @@
     <img src="./images/mobile/gallery/gallery.jpg" alt="photo gallery" />
   </picture>
   </div>
-</section>
+</section> -->
