--- a/src/sass/utils/variables.scss
+++ b/src/sass/utils/variables.scss
@@ -27,6 +27,9 @@ $second-text-color: #907e82;
 $border: #e18298;
 //  icons
 $icons: #fea5bb;
+// feedback
+$feedback: #fafafa;
+$dots: #d9d9d9;
 
 // functions
 // тайминг для transition
