--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -1,56 +1,72 @@
 <!--Feedback-->
 <section class="section section--feedback">
   <div class="container">
-    <ul class="feedback-list">
-      <li class="feedback-list__item">
+    <div class="feedback-list">
+      <div class="feedback-list__item mySlides fade">
         <img
           src="./images/general/feedback/testimonials1@1x.jpg"
           srcset="./images/general/feedback/testimonials1@2x.jpg 2x"
           alt="Фото1"
+          class="feedback__photo"
         />
-      </li>
-      <li class="feedback-list__item">
+        <div class="feedback-text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
+        </div>
+        <svg class="three-red-points" width="24" height="4">
+          <use href="./images/icons/sprite.svg#icon-points-red"></use>
+        </svg>
+        <p class="feedback-person">Emily, Los Angeles</p>
+      </div>
+      <div class="feedback-list__item mySlides fade">
         <img
           src="./images/general/feedback/testimonials2@1x.jpg"
           srcset="./images/general/feedback/testimonials2@2x.jpg 2x"
           alt="Фото1"
+          class="feedback__photo"
         />
-      </li>
-      <li class="feedback-list__item">
+        <div class="feedback-text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
+        </div>
+        <svg class="three-red-points" width="24" height="4">
+          <use href="./images/icons/sprite.svg#icon-points-red"></use>
+        </svg>
+        <p class="feedback-person">Emily, Los Angeles</p>
+      </div>
+      <div class="feedback-list__item mySlides fade">
         <img
           src="./images/general/feedback/testimonials3@1x.jpg"
           srcset="./images/general/feedback/testimonials3@2x.jpg 2x"
           alt="Фото1"
+          class="feedback__photo"
         />
-      </li>
-    </ul>
-    <div class="feedback-text-block">
-      <p class="feedback-text">
-        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
-        sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis
-        in nibh vel risus.
-      </p>
+        <div class="feedback-text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
+        </div>
+        <svg class="three-red-points" width="24" height="4">
+          <use href="./images/icons/sprite.svg#icon-points-red"></use>
+        </svg>
+        <p class="feedback-person">Emily, Los Angeles</p>
+      </div>
     </div>
-    <svg class="three-red-points" width="24" height="4">
-      <use href="./images/icons/sprite.svg#icon-points-red"></use>
-    </svg>
-    <p class="feedback-person">Emily, Los Angeles</p>
-    <ul class="feedback-svg-list">
-      <li class="feedback-svg-list__item">
-        <svg width="12" height="12">
-          <use href="./images/icons/sprite.svg#icon-home"></use>
-        </svg>
-      </li>
-      <li class="feedback-svg-list__item">
-        <svg width="12" height="12">
-          <use href="./images/icons/sprite.svg#icon-circle-gray"></use>
-        </svg>
-      </li>
-      <li class="feedback-svg-list__item">
-        <svg width="12" height="12">
-          <use href="./images/icons/sprite.svg#icon-circle-gray"></use>
-        </svg>
-      </li>
-    </ul>
+    <div class="feedback-svg-list">
+      <span class="dot feedback-svg-list__item" onclick="currentSlide(1)"
+        ><svg width="12" height="12">
+          <use href="./images/icons/sprite.svg#icon-home"></use></svg
+      ></span>
+      <span class="dot feedback-svg-list__item" onclick="currentSlide(2)"
+        ><svg width="12" height="12">
+          <use href="./images/icons/sprite.svg#icon-circle-gray"></use></svg
+      ></span>
+      <span class="dot feedback-svg-list__item" onclick="currentSlide(3)"
+        ><svg width="12" height="12">
+          <use href="./images/icons/sprite.svg#icon-circle-gray"></use></svg
+      ></span>
+    </div>
   </div>
 </section>
