--- a/src/sass/components/feedback.scss
+++ b/src/sass/components/feedback.scss
@@ -1,15 +1,23 @@
 .section--feedback {
-  padding-top: 80px;
+  padding-top: 170px;
   padding-bottom: 170px;
   text-align: center;
+  @include for-size(tablet) {
+    padding-top: 275px;
+    padding-bottom: 200px;
+  }
+  @include for-size(desktop) {
+    padding-top: 380px;
+    padding-bottom: 235px;
+  }
 }
 .feedback-list__item {
   margin: 0 auto;
   @include for-size(tablet) {
-    max-width: 460px;
+    max-width: 620px;
   }
   @include for-size(desktop) {
-    max-width: 750px;
+    max-width: 925px;
   }
 }
 .feedback__photo {
@@ -34,21 +42,24 @@
   background-repeat: no-repeat;
   background-position: 60px 30px;
   @include for-size(tablet) {
-    padding: 30px 36px 25px;
+    margin-bottom: 25px;
+    padding: 50px 80px 35px;
     background-position: 30px 40px;
   }
   @include for-size(desktop) {
+    margin-bottom: 15px;
     padding: 50px 90px 40px;
+    background-position: 50px 30px;
   }
-  // &:before {
-  //   content: '';
-  //   position: absolute;
-  //   top: 0;
-  //   right: 0;
-  //   width: 100%;
-  //   height: 4px;
-  //   background-color: aqua;
-  // }
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 4px;
+    background-color: aqua;
+  }
 }
 
 .feedback-list__item:not(:first-child) {
@@ -69,13 +80,15 @@
 }
 
 .feedback-svg-list__item:hover,
-.feedback-svg-list__item:focus {
+.feedback-svg-list__item:focus,
+.active {
   @include trans(fill, $main-color);
 }
 .three-red-points {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 18px;
+  fill: $hover-btnred;
 }
 .feedback-person {
   margin-bottom: 30px;
