--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,8 @@
-<section class="section--contacts section">
+<section class="section--contacts section" id="contacts">
   <div class="container">
-    <h2 class="section__title visually-hidden">Адресс и контакт кафе и фудтраков з мороженым</h2>
+    <h2 class="section__title visually-hidden">
+      Адресс и контакт кафе и фудтраков з мороженым
+    </h2>
     <div class="contacts">
       <ul class="contacts__row">
         <li class="contacts__column">
@@ -9,8 +11,7 @@
               <div class="contacts-address__background">
                 <h3 class="contacts-address__title">CAFE</h3>
               </div>
-                
-        
+
               <p class="contacts-address__city">Chicago</p>
               <p class="contacts-address__text">
                 Fusce ut velit laoreet, tempus arcu molestie vulputate
@@ -26,23 +27,33 @@
                 <p class="contacts-work__time">08:00 AM - 16:00 PM</p>
               </li>
             </ul>
-              <ul class="contacts-contact">
-                <li class="contacts-contact__item">
-                  <a href="tel:+610383766284" class="contacts-contact__link phone">+61(0) 383 766 284</a>
-                </li>
-                <li class="contacts-contact__item">
-                  <a href="mailto:noreply@envato.com" class="contacts-contact__link email">noreply@envato.com</a>
-                </li>
-              </ul>
+            <ul class="contacts-contact">
+              <li class="contacts-contact__item">
+                <a href="tel:+610383766284" class="contacts-contact__link phone"
+                  >+61(0) 383 766 284</a
+                >
+              </li>
+              <li class="contacts-contact__item">
+                <a
+                  href="mailto:noreply@envato.com"
+                  class="contacts-contact__link email"
+                  >noreply@envato.com</a
+                >
+              </li>
+            </ul>
           </div>
         </li>
         <li class="contacts__column">
           <div class="contacts__item">
             <div class="contacts-address">
               <div class="contacts-address__background">
-                <h3 class="contacts-address__title contacts-address__title--green">FOODTRUCK</h3>
+                <h3
+                  class="contacts-address__title contacts-address__title--green"
+                >
+                  FOODTRUCK
+                </h3>
               </div>
-              
+
               <p class="contacts-address__city">Los Angeles</p>
               <p class="contacts-address__text">
                 Fusce ut velit laoreet, tempus arcu molestie vulputate
@@ -60,10 +71,16 @@
             </ul>
             <ul class="contacts-contact">
               <li class="contacts-contact__item">
-                <a href="tel:+610383766284" class="contacts-contact__link phone">+61(0) 383 766 284</a>
+                <a href="tel:+610383766284" class="contacts-contact__link phone"
+                  >+61(0) 383 766 284</a
+                >
               </li>
               <li class="contacts-contact__item">
-                <a href="mailto:noreply@envato.com" class="contacts-contact__link email">noreply@envato.com</a>
+                <a
+                  href="mailto:noreply@envato.com"
+                  class="contacts-contact__link email"
+                  >noreply@envato.com</a
+                >
               </li>
             </ul>
           </div>
@@ -74,53 +91,53 @@
               <div class="contacts-address__background">
                 <h3 class="contacts-address__title">CAFE</h3>
               </div>
-              
+
               <p class="contacts-address__city">Chicago</p>
               <p class="contacts-address__text">
                 Fusce ut velit laoreet, tempus arcu molestie vulputate
               </p>
             </div>
-          <ul class="contacts-work">
-            <li class="contact-work__item">
-              <p class="contacts-work__days">Monday - Friday</p>
-              <p class="contacts-work__time">06:00 AM - 10:00 PM</p>
-            </li>
-            <li class="contact-work__item">
-              <p class="contacts-work__days">Saturday - Sunday</p>
-              <p class="contacts-work__time">08:00 AM - 16:00 PM</p>
-            </li>
-          </ul>
+            <ul class="contacts-work">
+              <li class="contact-work__item">
+                <p class="contacts-work__days">Monday - Friday</p>
+                <p class="contacts-work__time">06:00 AM - 10:00 PM</p>
+              </li>
+              <li class="contact-work__item">
+                <p class="contacts-work__days">Saturday - Sunday</p>
+                <p class="contacts-work__time">08:00 AM - 16:00 PM</p>
+              </li>
+            </ul>
             <ul class="contacts-contact">
               <li class="contacts-contact__item">
-                <a href="tel:+610383766284" class="contacts-contact__link phone">+61(0) 383 766 284</a>
+                <a href="tel:+610383766284" class="contacts-contact__link phone"
+                  >+61(0) 383 766 284</a
+                >
               </li>
               <li class="contacts-contact__item">
-                <a href="mailto:noreply@envato.com" class="contacts-contact__link email">noreply@envato.com</a>
+                <a
+                  href="mailto:noreply@envato.com"
+                  class="contacts-contact__link email"
+                  >noreply@envato.com</a
+                >
               </li>
             </ul>
           </div>
         </li>
       </ul>
-    <div class="contacts-block">
-    <a href="" class="contacts-block__link">Our Locations
-      <svg 
-      class="contacts-block__icon"
-      width="6"
-      height="10"
-      >
-        <use class="" href="./images/icons/sprite.svg#icon-bigger"></use>
-      </svg>
-    </a>
-    <a href="" class="contacts-block__link contacts-block__link--white">Franchise
-      <svg 
-      class="contacts-block__icon--white" 
-      width="6"
-      height="10"
-     >
-        <use class="" href="./images/icons/sprite.svg#icon-bigger"></use>
-      </svg>
-    </a>
-    </div>
+      <div class="contacts-block">
+        <a href="" class="contacts-block__link"
+          >Our Locations
+          <svg class="contacts-block__icon" width="6" height="10">
+            <use class="" href="./images/icons/sprite.svg#icon-bigger"></use>
+          </svg>
+        </a>
+        <a href="" class="contacts-block__link contacts-block__link--white"
+          >Franchise
+          <svg class="contacts-block__icon--white" width="6" height="10">
+            <use class="" href="./images/icons/sprite.svg#icon-bigger"></use>
+          </svg>
+        </a>
+      </div>
     </div>
   </div>
 </section>
