--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -1,6 +1,6 @@
 <!--Feedback-->
 <section class="section section--feedback">
-  <div class="container">
+  <div class="container" id="feedback">
     <div class="feedback-list">
       <div class="feedback-list__item mySlides fade">
         <img
