--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container header__container">
     <div class="header__flexbox">
-      <a href="#" class="logo"
+      <a href="#" class="logo" id="home"
         ><img src="./images/general/logo.png" alt="logo" />
       </a>
       <div class="nav">
@@ -34,10 +34,10 @@
           </button>
           <ul class="nav__list">
             <li class="nav__item">
-              <a href="#home" class="nav__link link">Home</a>
+              <a href="#home" class="nav__link link current">Home</a>
             </li>
             <li class="nav__item">
-              <a href="#aboutus" class="nav__link link">About us</a>
+              <a href="#feedback" class="nav__link link">About us</a>
             </li>
             <li class="nav__item">
               <a href="#howitsmade" class="nav__link link">How it's made?</a>
