--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="section products__section">
+<section class="section products__section" id="products">
   <div class="container products__container">
     <p class="products__text">100% natural</p>
     <h2 class="products__title">products</h2>
@@ -6,18 +6,24 @@
       <li class="products__item products__item--ice-cream">
         <picture class="products__item-pic">
           <source
-            srcset="./images/desktop/products/product1@1x.png 1x,
-            ./images/desktop/products/product1@2x.png 2x"
+            srcset="
+              ./images/desktop/products/product1@1x.png 1x,
+              ./images/desktop/products/product1@2x.png 2x
+            "
             media="(min-width: 1200px)"
           />
           <source
-            srcset="./images/tablet/products/product1@1x.png 1x,
-            ./images/tablet/products/product1@2x.png 2x"
+            srcset="
+              ./images/tablet/products/product1@1x.png 1x,
+              ./images/tablet/products/product1@2x.png 2x
+            "
             media="(min-width: 768px)"
           />
           <source
-            srcset="./images/mobile/products/product1@1x.png 1x,
-            ./images/mobile/products/product1@2x.png 2x"
+            srcset="
+              ./images/mobile/products/product1@1x.png 1x,
+              ./images/mobile/products/product1@2x.png 2x
+            "
             media="(max-width: 767px)"
           />
           <img
@@ -30,27 +36,35 @@
         <svg class="products__item-svg" width="26px" height="6px">
           <use href="./images/icons/sprite.svg#icon-points-white"></use>
         </svg>
-        <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et. 
-          dolore magna aliqua facilisis.
+        <p class="products__item-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
         </p>
-        <button type="button" class="button button--white products__button"><img src="./images/icons/arrow-right.png" alt=""></button>
+        <button type="button" class="button button--white products__button">
+          <img src="./images/icons/arrow-right.png" alt="" />
+        </button>
       </li>
       <li class="products__item products__item--coffee">
         <picture class="products__item-pic">
           <source
-            srcset="./images/desktop/products/product2@1x.png 1x,
-            ./images/desktop/products/product2@2x.png 2x"
+            srcset="
+              ./images/desktop/products/product2@1x.png 1x,
+              ./images/desktop/products/product2@2x.png 2x
+            "
             media="(min-width: 1200px)"
           />
           <source
-            srcset="./images/tablet/products/product2@1x.png 1x,
-            ./images/tablet/products/product2@2x.png 2x"
+            srcset="
+              ./images/tablet/products/product2@1x.png 1x,
+              ./images/tablet/products/product2@2x.png 2x
+            "
             media="(min-width: 768px)"
           />
           <source
-            srcset="./images/mobile/products/product2@1x.png 1x,
-            ./images/mobile/products/product2@2x.png 2x"
+            srcset="
+              ./images/mobile/products/product2@1x.png 1x,
+              ./images/mobile/products/product2@2x.png 2x
+            "
             media="(max-width: 767px)"
           />
           <img
@@ -63,27 +77,35 @@
         <svg class="products__item-svg" width="26px" height="6px">
           <use href="./images/icons/sprite.svg#icon-points-white"></use>
         </svg>
-        <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et. 
-          dolore magna aliqua facilisis.
+        <p class="products__item-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
         </p>
-        <button type="button" class="button button--white products__button"><img src="./images/icons/arrow-right.png" alt=""></button>
+        <button type="button" class="button button--white products__button">
+          <img src="./images/icons/arrow-right.png" alt="" />
+        </button>
       </li>
       <li class="products__item products__item--milkshake">
         <picture class="products__item-pic">
           <source
-            srcset="./images/desktop/products/product3@1x.png 1x,
-            ./images/desktop/products/product3@2x.png 2x"
+            srcset="
+              ./images/desktop/products/product3@1x.png 1x,
+              ./images/desktop/products/product3@2x.png 2x
+            "
             media="(min-width: 1200px)"
           />
           <source
-            srcset="./images/tablet/products/product3@1x.png 1x,
-            ./images/tablet/products/product3@2x.png 2x"
+            srcset="
+              ./images/tablet/products/product3@1x.png 1x,
+              ./images/tablet/products/product3@2x.png 2x
+            "
             media="(min-width: 768px)"
           />
           <source
-            srcset="./images/mobile/products/product3@1x.png 1x,
-            ./images/mobile/products/product3@2x.png 2x"
+            srcset="
+              ./images/mobile/products/product3@1x.png 1x,
+              ./images/mobile/products/product3@2x.png 2x
+            "
             media="(max-width: 767px)"
           />
           <img
@@ -96,12 +118,14 @@
         <svg class="products__item-svg" width="26px" height="6px">
           <use href="./images/icons/sprite.svg#icon-points-white"></use>
         </svg>
-        <p class="products__item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et. 
-          dolore magna aliqua facilisis.
+        <p class="products__item-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
         </p>
-        <button type="button" class="button button--white products__button"><img src="./images/icons/arrow-right.png" alt=""></button>
+        <button type="button" class="button button--white products__button">
+          <img src="./images/icons/arrow-right.png" alt="" />
+        </button>
       </li>
     </ul>
-  </div>  
-
+  </div>
+</section>
