--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -1,4 +1,4 @@
-<section class="howitsmade">
+<section class="howitsmade" id="howitsmade">
   <div class="container">
     <span class="section__desc section__desc--howitsmade"
       >tradition and love</span
