--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -174,6 +174,9 @@
   &:focus {
     @include trans(color, $main-color);
   }
+  &.current {
+    color: $main-color;
+  }
 }
 .nav__button {
   @extend .button;
