--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -10,9 +10,9 @@
           class="feedback__photo"
         />
         <div class="feedback-text">
-          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-          ipsum primis in nibh vel risus.
+       <p class="feedback-text__content">Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+      Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+      ipsum primis in nibh vel risus.</p>
         </div>
         <svg class="three-red-points" width="24" height="4">
           <use href="./images/icons/sprite.svg#icon-points-red"></use>
@@ -27,23 +27,23 @@
           class="feedback__photo"
         />
         <div class="feedback-text">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, cumque
-          atque. Optio beatae natus, soluta eveniet at aliquid eaque laboriosam
-          ipsa accusamus ipsum quaerat facilis vitae aperiam, neque veniam totam
-          accusantium necessitatibus asperiores quidem quos ab. Blanditiis odio
-          hic expedita itaque dicta modi quae, totam fugiat voluptatum
-          voluptatibus cupiditate exercitationem reprehenderit est cumque
-          distinctio facilis. Cumque placeat neque nam explicabo! Porro, atque
-          beatae minima magnam vel, ullam excepturi velit ab, fugit maiores
-          dolorem non amet voluptate reiciendis! Id repellat corporis a, iure
-          magnam assumenda, doloribus vitae culpa consequuntur minima nihil.
-          Alias ratione dolore nostrum, sequi exercitationem eos fuga enim dicta
-          aut adipisci minima ea necessitatibus, facilis cum assumenda nobis
-          veritatis possimus vitae quisquam iste ullam voluptates a, harum
-          incidunt. Rem soluta accusantium sunt cum vero commodi ducimus a.
-          Optio dolor quidem, ea facere natus nesciunt facilis. Quod est quaerat
-          libero rerum eum, neque laboriosam, cum excepturi iure inventore eaque
-          incidunt.
+     <p class="feedback-text__content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos, cumque
+    atque. Optio beatae natus, soluta eveniet at aliquid eaque laboriosam
+    ipsa accusamus ipsum quaerat facilis vitae aperiam, neque veniam totam
+    accusantium necessitatibus asperiores quidem quos ab. Blanditiis odio
+    hic expedita itaque dicta modi quae, totam fugiat voluptatum
+    voluptatibus cupiditate exercitationem reprehenderit est cumque
+    distinctio facilis. Cumque placeat neque nam explicabo! Porro, atque
+    beatae minima magnam vel, ullam excepturi velit ab, fugit maiores
+    dolorem non amet voluptate reiciendis! Id repellat corporis a, iure
+    magnam assumenda, doloribus vitae culpa consequuntur minima nihil.
+    Alias ratione dolore nostrum, sequi exercitationem eos fuga enim dicta
+    aut adipisci minima ea necessitatibus, facilis cum assumenda nobis
+    veritatis possimus vitae quisquam iste ullam voluptates a, harum
+    incidunt. Rem soluta accusantium sunt cum vero commodi ducimus a.
+    Optio dolor quidem, ea facere natus nesciunt facilis. Quod est quaerat
+    libero rerum eum, neque laboriosam, cum excepturi iure inventore eaque
+    incidunt.</p>
         </div>
         <svg class="three-red-points" width="24" height="4">
           <use href="./images/icons/sprite.svg#icon-points-red"></use>
@@ -58,14 +58,14 @@
           class="feedback__photo"
         />
         <div class="feedback-text">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex vitae et
+          <p class="feedback-text__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex vitae et
           libero tempora cupiditate vel, ad tempore, ducimus repudiandae
           mollitia consequatur asperiores suscipit unde consequuntur atque nulla
           aspernatur obcaecati inventore officia, fugiat expedita ipsa quo
           quidem? Impedit similique aliquam ad recusandae odit, incidunt
           perspiciatis possimus dolorem omnis deleniti dolor nihil, nemo
           voluptas amet quidem ullam quo modi doloremque itaque laudantium autem
-          aspernatur, officiis nobis? Quam culpa nam odio.
+          aspernatur, officiis nobis? Quam culpa nam odio.</p>
         </div>
         <svg class="three-red-points" width="24" height="4">
           <use href="./images/icons/sprite.svg#icon-points-red"></use>
