--- a/src/sass/components/feedback.scss
+++ b/src/sass/components/feedback.scss
@@ -35,9 +35,6 @@
   padding: 43px 60px 26px;
   margin-bottom: 30px;
   background-color: $feedback;
-  // border-bottom: 1px solid #e1e1e1;
-  // border-bottom: 1px dotted #c03;
-  // text-decoration: underline;
   background-image: url('../images/icons/quotes.svg');
   background-repeat: no-repeat;
   background-position: 60px 30px;
@@ -60,6 +57,20 @@
     height: 4px;
     background-color: aqua;
   }
+}
+
+.feedback-text__content {
+  background-image: linear-gradient(
+    180deg,
+    rgba(250, 250, 250, 0) 48.39%,
+    #e1e1e1 48.39%,
+    #e1e1e1 50%,
+    rgba(250, 250, 250, 0) 50%,
+    rgba(250, 250, 250, 0) 98.39%,
+    #e1e1e1 98.39%,
+    #e1e1e1 100%
+  );
+  background-size: 62px 62px;
 }
 
 .feedback-list__item:not(:first-child) {
